HEAD
	+ Fixed typo in regualr expression that checks external accounts names
	+ Plain usernames without mail domain now are allowed for mail
	retrieval from external accounts 
1.4.1
	+ Bugfix, fix incorrect alias dn breaking aliases in postfix
	+ Bugfix, when create a maildir if a leftover maildir already
	  exists now is correctly backuped with the .bak extension
1.3.18
	+ Add widget for external retrieval service (fetchmail)
1.3.17
	+ Added breadcrumbs to external aliases and virtual domain
	  settings models
1.3.16
	+ Make auto creation of e-mail accounts more robust
	+ Bad mailname doesnt disable module activation. Warning message
	added when bad mailname is set. Mailname check in vdomains
1.3.15
	+ Change UI for maximum message limits and expiration limits
	+ Bugfix: The report tables changed its name and they are used by
	  code correctly
	+ Added postmaster option and deprecated bounceReturnAddress
	option
	+ Fixed migration script and ulimited mail message size
	multiplication warning. The error in migration dont corrupted
	configuration but made new installations fail the last migration
	script.
	+ Updated localAttributes in MailUserLdap
	+ Added LOGIN to authorization mechanisms
	+ Using /etc/mailname in hostname and sasl_domain paramteres
	+ Better check of mailname, assure that mailname is correct before
	enabling module
	+ Changed SIEVE directory location to /var/vmail/sieve
1.3.14
	+ Added precondition in ObjectPolicy model
	+ Account home in dovecot set to its maildir, this is necesary for
	some SIEVE features like vacation autoreply
	+ Added autocreation of drafts and sent mail folders
	+ Fixed bug in UI: now we can set properly the number of
	expiration days for spam and deleted messages
	+ Added per domain catch-all accounts
	+ Logs fixes
	+ Added aliases to external accounts
	+ Added multiple aliases per group
	+ Improved queue management
	+ Added dovecot-antispam plugin integration
	+ Added email retrieval for external accounts