@@ -1,5 +1,6 @@
 # Generated by eBox
 <%args>
+        $hostname
         $ldapport
 
         $relay
@@ -74,6 +75,9 @@ append_dot_mydomain = no
 
 
 myorigin = /etc/mailname
+myhostname = <% $hostname %>
+mydestination = $myorigin,$myhostname,localhost,localhost.$mydomain
+smtp_helo_name = $myorigin
 alias_maps = hash:/etc/aliases
 
 alias_database = hash:/etc/aliases
@@ -158,7 +162,7 @@ broken_sasl_auth_clients = yes
 smtpd_tls_auth_only = yes
 smtpd_sasl_type = dovecot
 smtpd_sasl_path = private/auth
-smtpd_sasl_local_domain =  $myhostname 
+smtpd_sasl_local_domain =  $myorigin
 % }
 
 % if ($filter) {
